--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
         "@angular/router": "^18.0.0",
         "material": "^0.9.15",
         "ngx-mat-select-search": "^7.0.7",
+        "obs-websocket-js": "^5.0.6",
         "rxjs": "~7.8.0",
+        "socket.io-client": "^4.7.5",
         "tslib": "^2.3.0",
         "zone.js": "~0.14.3"
     },
